test/libsolidity/syntaxTests/tryCatch/catch_custom_no_paren.sol
contract C {
    error E();
    function f() public returns (uint, uint) {
        try this.f() {

        } catch E {

        }
    }
}
// ====
// EVMVersion: >=byzantium
// ----
// ParserError 2314: (117-118): Expected '(' but got '{'
